syntax = "proto3";

package examplepb;

option go_package = "github.com/018bf/example/pkg/examplepb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message DayCreate {
  string name = 1;
  int32 repeat = 2;
  string equipment_id = 3;
}

message DayGet {
  string id = 1;
}

message DayUpdate {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.Int32Value repeat = 3;
  google.protobuf.StringValue equipment_id = 4;
}

message Day {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string name = 4;
  int32 repeat = 5;
  string equipment_id = 6;
}

message ListDay {
  repeated Day items = 1;
  uint64 count = 2;
}

message DayDelete {
  string id = 1;
}

message DayFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
  google.protobuf.StringValue search = 5;
}

service DayService {
  rpc Create(examplepb.DayCreate) returns (examplepb.Day);
  rpc Get(examplepb.DayGet) returns (examplepb.Day);
  rpc Update(examplepb.DayUpdate) returns (examplepb.Day);
  rpc Delete(examplepb.DayDelete) returns (google.protobuf.Empty);
  rpc List(examplepb.DayFilter) returns (examplepb.ListDay);
}